# fastsend

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/block/: mod.rs
src/serial/: mod.rs
src/serial/auto_increment/: mod.rs
src/serial/random62/: mod.rs
src/serial/ticket/: mod.rs
src/serial/uuid/: mod.rs
src/token/: mod.rs
tests/: test_token.rs
